// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatComment should format comment consistently 1`] = `
"## mock title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L10

##### NOTE

- [ ] Please don't forget review \`Line: 11\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L11
- [ ] another note \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L20

##### tODo:

- [ ] this should present \`Line: 13\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L13

##### missingBody

- [ ] <space> \`Line: 1\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L1
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L20

##### NOTE

- [ ] Please don't forget review \`Line: 21\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L21
- [ ] another note \`Line: 2\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L2

##### tODo:

- [ ] this should present \`Line: 5\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L5-L10
</details>

"
`;

exports[`FormatComment should tag actor with reviewMsg 1`] = `
"## mock title
<details>
<summary><strong>tests/mockFiles/mockFile0.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 10\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L10

##### NOTE

- [ ] Please don't forget review \`Line: 11\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L11
- [ ] another note \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L20

##### tODo:

- [ ] this should present \`Line: 13\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L13

##### missingBody

- [ ] <space> \`Line: 1\`
https://githubHost/owner/repo/blob/sha/mockFile0.js#L1
</details>

<details>
<summary><strong>tests/mockFiles/mockFile2.js</strong></summary>

##### FIXME:

- [ ] :add implementation \`Line: 20\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L20

##### NOTE

- [ ] Please don't forget review \`Line: 21\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L21
- [ ] another note \`Line: 2\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L2

##### tODo:

- [ ] this should present \`Line: 5\`
https://githubHost/owner/repo/blob/sha/mockFile2.js#L5
</details>

---
@mock-actor please review"
`;
